@@ -4,7 +4,7 @@
     ./disko.nix
     (self + /profiles/nixos/workstation.nix)
     (self + /profiles/nixos/wg0.nix)
-    (self + /profiles/nixos/wg1.nix)
+    # (self + /profiles/nixos/wg1.nix)
     (self + /profiles/nixos/keyd/gmans-keymap.nix)
   ];
   boot.initrd.availableKernelModules = [
